fix(monthly mini-mode): clean up css for multi-day selection dark mode

--- a/ui/src/css/calendar-weekly.sass
+++ b/ui/src/css/calendar-weekly.sass
@@ -254,15 +254,15 @@
       &.q-selected-date,
       &.q-selected-day-first
         &:before
-          border-top-left-radius: 25%
-          border-bottom-left-radius: 25%
+          border-top-left-radius: 50%
+          border-bottom-left-radius: 50%
 
       &.q-selected-day-last
         &:before
-          width: 50%
+          width: 25%
           right: auto
-          border-top-right-radius: 25%
-          border-bottom-right-radius: 25%
+          border-top-right-radius: 50%
+          border-bottom-right-radius: 50%
         &.q-selected-day-first
           &:before
             width: 0
